contract/employee entity + payload

--- a/api/.env
+++ b/api/.env
@@ -4,7 +4,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=ralphi
 DB_PASSWORD=P@ssword
-DB_DATABASE=ralphi
+DB_DATABASE=ralphi2
 DB_MIGRATIONS=true
 DB_SYNC='true'
 
