--- a/app/package.json
+++ b/app/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "^19.0.5",
     "@angular/router": "^19.0.5",
     "@fortawesome/angular-fontawesome": "^1.0.0",
-    "@ngx-translate/core": "^16.0.3",
-    "@ngx-translate/http-loader": "^16.0.0",
+    "@messageformat/core": "^3.4.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@primeng/themes": "^19.0.0",
+    "chart.js": "^4.4.7",
+    "ngx-translate-messageformat-compiler": "^7.0.0",
     "primeng": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
