--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "@primeng/themes": "^19.0.0",
     "chart.js": "^4.4.7",
+    "ngx-toastr": "^19.0.0",
     "ngx-translate-messageformat-compiler": "^7.0.0",
     "primeng": "^19.0.0",
     "rxjs": "~7.8.0",
