--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.4.7",
     "ngx-toastr": "^19.0.0",
     "ngx-translate-messageformat-compiler": "^7.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
